syntax = "proto3";

option go_package = "github.com/r04922101/go-grpc-example/new";
package unary;
import "google/protobuf/timestamp.proto";

service HelloService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  // reserve deprecated field and its name
  reserved 3;
  reserved "sport";

  // rename field
  string message = 1;
  // reuse/repurpose field number, change from int32 number
  bool is_new = 2;

  enum Sport {
    SPORT_UNKNOWN = 0;
    SPORT_BASEBALL = 1;
    SPORT_BASKETBALL = 2;
  }

  // add new field
  google.protobuf.Timestamp timestamp = 4;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
  google.protobuf.Timestamp timestamp = 2;
}